2012-09-17  Sam Weinig  <sam@webkit.org>

        Add experimental code to enter a sandbox for a plug-in.
        Based on a patch by Ivan Krstić.
        <rdar://problem/11823151>

        Reviewed by Anders Carlsson.

        Enter a sandbox for a plug-in if a sandbox profile is found in /usr/share/sandbox/ that
        has the plug-ins bundle identifier for a name.

        * PluginProcess/mac/PluginProcessMac.mm:
        (WebKit::initializeSandbox):
        (WebKit::PluginProcess::platformInitialize):
        Enter the sandbox provided if a profile can be found.

        * WebProcess/Plugins/Netscape/mac/NetscapeSandboxFunctions.h:
        * WebProcess/Plugins/Netscape/mac/NetscapeSandboxFunctions.mm:
        (enterSandbox):
        Factor out the core sandbox entering logic (so if can be used above) and make sure
        that Remote Save Panel is enabled.

2012-09-17  Mark Hahnenberg  <mhahnenberg@apple.com>

        Fixing the build after http://trac.webkit.org/changeset/128813

        * WebProcess/Plugins/Netscape/JSNPObject.cpp:
        (WebKit):
        (WebKit::JSNPObject::JSNPObject):
        * WebProcess/Plugins/Netscape/JSNPObject.h:
        (JSNPObject):

2012-09-17  Anders Carlsson  <andersca@apple.com>

        Crash if we fail to allocate memory for the argument encoder buffer.
        https://bugs.webkit.org/show_bug.cgi?id=88367

        Reviewed by Andreas Kling.
        <rdar://problem/11488239>

        Since there's no way to recover from malloc returning null here, just crash.

        * Platform/CoreIPC/ArgumentEncoder.cpp:
        (CoreIPC::ArgumentEncoder::grow):

2012-09-17  Beth Dakin  <bdakin@apple.com>

        https://bugs.webkit.org/show_bug.cgi?id=96936
        Opt into layers for fixed positioned elements for TiledDrawingArea

        Reviewed by Tim Horton.

        This code already exists in DrawingAreaImpl, and we need it for 
        TiledCoreAnimationDrawingArea as well.